Update coffee menu items and enhance styling for home and about sections

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a href="#" class="box">
                 <img src="./image/menu-1.png" alt="">
                 <div class="content">
-                    <h3>fresh coffee</h3>
+                    <h3>Espresso</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore odit, tempore optio
                         architecto adipisci. </p>
                     <span class="price">$4.99</span>
@@ -94,7 +94,7 @@
             <a href="#" class="box">
                 <img src="./image/menu-2.png" alt="">
                 <div class="content">
-                    <h3>fresh coffee</h3>
+                    <h3>Cappuccino</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore odit, tempore optio
                         architecto adipisci. </p>
                     <span class="price">$4.99</span>
@@ -103,7 +103,7 @@
             <a href="#" class="box">
                 <img src="./image/menu-3.png" alt="">
                 <div class="content">
-                    <h3>fresh coffee</h3>
+                    <h3>Latte</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore odit, tempore optio
                         architecto adipisci. </p>
                     <span class="price">$4.99</span>
@@ -112,7 +112,7 @@
             <a href="#" class="box">
                 <img src="./image/menu-4.png" alt="">
                 <div class="content">
-                    <h3>fresh coffee</h3>
+                    <h3>Americano</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore odit, tempore optio
                         architecto adipisci. </p>
                     <span class="price">$4.99</span>
@@ -121,7 +121,7 @@
             <a href="#" class="box">
                 <img src="./image/menu-5.png" alt="">
                 <div class="content">
-                    <h3>fresh coffee</h3>
+                    <h3>Mocha</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore odit, tempore optio
                         architecto adipisci. </p>
                     <span class="price">$4.99</span>
@@ -130,7 +130,7 @@
             <a href="#" class="box">
                 <img src="./image/menu-6.png" alt="">
                 <div class="content">
-                    <h3>fresh coffee</h3>
+                    <h3>Macchiato</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste labore odit, tempore optio
                         architecto adipisci. </p>
                     <span class="price">$4.99</span>
